setings sass basis styles

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,1 +1,8 @@
-@import './body';
+// UTILS
+@import './utils/mixin';
+@import './utils/variables';
+
+// BASE
+@import './base/base';
+// @import './base/fonts';
+@import './base/reset';
