add header, hero, about

--- a/src/sass/base/_fonts.scss
+++ b/src/sass/base/_fonts.scss
@@ -1,4 +1,4 @@
-/* Georgia */
+/* Georgia 400 */
 @font-face {
   font-display: swap;
   font-family: 'Georgia';
@@ -8,6 +8,15 @@
       format('woff2'),
     url('../../font/noto-serif-georgian-v24-latin-regular.woff') format('woff');
 }
+// 200
+@font-face {
+  font-display: swap;
+  font-family: 'Georgia';
+  font-style: normal;
+  font-weight: 200;
+  src: url('../../font/noto-serif-georgian-v24-latin-200.woff2') format('woff2'),
+    url('../../font/noto-serif-georgian-v24-latin-200.woff') format('woff');
+}
 
 // Poppits
 @font-face {
@@ -16,5 +25,5 @@
   font-style: normal;
   font-weight: 400;
   src: url('../../font/poppins-v20-latin-regular.woff2') format('woff2'),
-    url('../../font/noto-serif-georgian-v24-latin-regular.woff') format('woff');
+    url('../../font/poppins-v20-latin-regular.woff') format('woff');
 }
