--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,3 +6,8 @@
 @import './base/base';
 // @import './base/fonts';
 @import './base/reset';
+
+// COMPONENTS
+@import './component/header';
+@import './component/hero';
+@import './component/about';
