--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,7 +7,7 @@ body {
   font-size: 14px;
   line-height: 1.6;
   background: #f2f2f2;
-  color: #353732;
+  color: #45525b;
   font-family: "Georgia", serif;
 }
 
@@ -42,9 +42,144 @@ p {
 
 a {
   text-decoration: none;
-  color: #353732;
+  color: #45525b;
 }
 
 address {
   font-style: normal;
+}
+
+.header-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 10px 15px;
+  background: #fff;
+}
+
+.burger-menu {
+  fill: #45525b;
+  max-height: 32px;
+  background-color: transparent;
+  outline: none;
+  border: none;
+  cursor: none;
+}
+
+.hero-container {
+  padding: 52px 20px 32px 20px;
+}
+
+.hero-logo {
+  min-width: 84px;
+  min-height: 42px;
+}
+
+.hero-title {
+  font-size: 23px;
+  line-height: 1.7;
+  font-weight: 200;
+  color: #353732;
+  padding: 20px 0 0 0;
+}
+
+.about {
+  background-color: #ededed;
+  padding: 0 20px;
+}
+
+.about-container {
+  width: 100%;
+  margin: 0 auto;
+}
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .about-container {
+    max-width: 280px;
+  }
+}
+
+.about-card-img {
+  padding: 0 0 32px 0;
+}
+
+.article-card {
+  padding-bottom: 32px;
+}
+
+.card-box {
+  max-width: 243px;
+  background-color: #fff;
+  padding-bottom: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.type-card {
+  font-size: 12px;
+  line-height: 1;
+  font-family: "Poppins", sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  color: #353732;
+  padding: 20px 0 12px 0;
+}
+
+.type-card-p {
+  font-size: 12px;
+  line-height: 1;
+  font-family: "Poppins", sans-serif;
+  text-transform: uppercase;
+  padding: 20px 0 0 20px;
+}
+
+.card-title {
+  font-size: 25px;
+  line-height: 1.3;
+  font-weight: 200;
+  padding: 0 0 16px 0;
+}
+
+.card-title-artcl {
+  font-size: 16px;
+  line-height: 1.4;
+  font-weight: 200;
+  padding: 12px 0 8px 20px;
+}
+
+.card-title-artcl-sl {
+  font-size: 16px;
+  line-height: 1.4;
+  font-weight: 200;
+  padding: 10px 0 20px 20px;
+}
+
+.card-description {
+  width: 280px;
+}
+
+.date {
+  font-size: 11px;
+  line-height: 1.5;
+  padding: 20px 0 0 0;
+}
+
+.date-p {
+  font-size: 11px;
+  line-height: 1.5;
+  padding: 0 0 0 20px;
+}
+
+.slider {
+  max-width: 243px;
+  margin: 0 auto;
+}
+
+.article-card-slider {
+  padding-bottom: 32px;
 }/*# sourceMappingURL=main.css.map */
