--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,11 +1,13 @@
 // TEXT
-$primary-clr-t: #353732;
-$secondary-clr-t: #45525b;
+$primary-clr-t: #45525b;
+$secondary-clr-t: #353732;
 $accent-clr: #ffffff;
 $btn-clr-t: #575445;
 
 // BG
 $primary-bg-fon: #f2f2f2;
+$header-bg-fon: #fff;
+$section-bg-fon: #ededed;
 
 // FILL
 $logo-fill: #45525b;
