--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,3 +12,5 @@
 @import './component/hero';
 @import './component/about';
 @import './component/subscription';
+@import './component/archive';
+@import './component/footer';
