--- a/src/sass/component/_about.scss
+++ b/src/sass/component/_about.scss
@@ -4,13 +4,13 @@
 }
 
 .about-container {
-  width: 100%;
-
-  margin: 0 auto;
-
   @include mobile {
     max-width: 280px;
   }
+
+  width: 100%;
+  padding-top: 32px;
+  margin: 0 auto;
 }
 
 .about-card-img {
