--- a/src/sass/component/_archive.scss
+++ b/src/sass/component/_archive.scss
@@ -14,6 +14,10 @@
 
 .archive-card-img {
   padding: 0 0 52px 0;
+
+  &__noImg {
+    padding: 0 0 44px 0;
+  }
 }
 
 .archive-img {
@@ -21,9 +25,13 @@
 }
 
 .archive-title {
-  @include font(16px, 1.5);
+  @include font(17px, 1.6);
   font-weight: 200;
   padding: 12px 0 4px 0;
+
+  &__noImg {
+    padding: 0px 0 4px 0;
+  }
 }
 
 .date-a {
