--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,3 +14,4 @@
 @import './component/subscription';
 @import './component/archive';
 @import './component/footer';
+@import './component/menu-burger';
