--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -16,6 +16,8 @@ $icon-arrow: #575445;
 
 // STROKE
 $stroke-clr: #e5e7eb;
+$stroke-clr-focus: #c8cace;
 
 // BTN
 $bg-btn: #353732;
+$close-btn: #45525b;
