--- a/src/css/main.css
+++ b/src/css/main.css
@@ -229,12 +229,13 @@ address {
 .data-input {
   display: block;
   position: relative;
+  font-family: "Georgia", serif;
   min-width: 280px;
   min-height: 38px;
   margin: 0;
   border: 1px solid #e5e7eb;
   border-radius: 8px;
-  padding-left: 4px;
+  padding-left: 10px;
   color: #353732;
 }
 .data-input:focus {
@@ -356,7 +357,7 @@ address {
 }
 
 .footer-text {
-  padding: 12px 0 16px 0;
+  padding: 16px 0 28px 0;
   color: #353732;
 }
 
