--- a/src/sass/component/_subscription.scss
+++ b/src/sass/component/_subscription.scss
@@ -39,12 +39,13 @@
 .data-input {
   display: block;
   position: relative;
+  font-family: 'Georgia', serif;
   min-width: 280px;
   min-height: 38px;
   margin: 0;
   border: 1px solid $stroke-clr;
   border-radius: 8px;
-  padding-left: 4px;
+  padding-left: 10px;
   color: $secondary-clr-t;
 
   &:focus {
