--- a/src/css/lightBox.css
+++ b/src/css/lightBox.css
@@ -47,9 +47,26 @@
   display: block;
   text-decoration: none;
   height: 100%;
+  font-size: 32px;
 }
 
 .gallery__link:hover {
   cursor: -webkit-zoom-in;
   cursor: zoom-in;
+}
+
+.test {
+  width: 300px;
+  height: 80px;
+  background-color: black;
+}
+
+.sl-wrapper {
+  z-index: 1040;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: rgba(223, 223, 223, 0.8235294118);
+  position: fixed;
 }/*# sourceMappingURL=lightBox.css.map */
