--- a/src/sass/component/_lightBox.scss
+++ b/src/sass/component/_lightBox.scss
@@ -16,7 +16,7 @@
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
 
 .gallery__item {
@@ -40,8 +40,59 @@
   display: block;
   text-decoration: none;
   height: 100%;
+  font-size: 32px;
 }
 
 .gallery__link:hover {
   cursor: zoom-in;
+}
+
+.test {
+  width: 300px;
+  height: 80px;
+  background-color: black;
+}
+
+.sl-wrapper {
+  z-index: 1040;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: #dfdfdfd2;
+  position: fixed;
+}
+
+.sl-close {
+  display: none;
+  position: fixed;
+  right: 30px;
+  top: 30px;
+  z-index: 10060;
+  margin-top: -14px;
+  margin-right: -14px;
+  height: 44px;
+  width: 44px;
+  line-height: 44px;
+  font-family: Arial, Baskerville, monospace;
+  color: #45525b !important;
+  font-size: 3rem;
+}
+
+.sl-counter {
+  color: #353732 !important;
+}
+
+.sl-wrapper .sl-navigation button {
+  position: fixed;
+  top: 50%;
+  margin-top: -22px;
+  height: 44px;
+  width: 22px;
+  line-height: 44px;
+  text-align: center;
+  display: block;
+  z-index: 10060;
+  font-family: Arial, Baskerville, monospace;
+  color: #353732 !important;
 }
