--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,3 +15,7 @@
 @import './component/archive';
 @import './component/footer';
 @import './component/menu-burger';
+
+// GALLERYMOUNTINS
+@import './galleryStyle/mountainsLB';
+@import './galleryStyle/climbingLB';
