--- a/src/css/main.css
+++ b/src/css/main.css
@@ -107,6 +107,7 @@ address {
 
 .about-card-img {
   padding: 0 0 32px 0;
+  width: 280px; /* ??? */
 }
 
 .article-card {
@@ -183,6 +184,19 @@ address {
 
 .article-card-slider {
   padding-bottom: 32px;
+  width: 243px;
+}
+
+.swiper-cube .swiper-cube-shadow:before {
+  content: "";
+  background: #353732 !important;
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  -webkit-filter: blur(50px);
+          filter: blur(50px);
 }
 
 .subscription {
