--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   position: relative;
   background: #e4ffae;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
@@ -11,4 +11,4 @@ body {
 
 .title {
  padding: 100px 0 0 100px;
-}
+} */
