--- a/src/sass/utils/_mixin.scss
+++ b/src/sass/utils/_mixin.scss
@@ -23,7 +23,7 @@
 //   }
 
 @mixin desktop {
-  @media screen and (min-width: 1023px) and (max-width: 1920) {
+  @media screen and (min-width: 1024px) and (max-width: 1920px) {
     @content;
   }
 }
