--- a/src/css/main.css
+++ b/src/css/main.css
@@ -93,11 +93,6 @@ address {
   background-color: #ededed;
   padding: 0 20px 8px 20px;
 }
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-  .about {
-    padding: 0 131px;
-  }
-}
 
 .about-container {
   width: 100%;
@@ -106,7 +101,7 @@ address {
 }
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .about-container {
-    padding-top: 50px;
+    padding: 50px 131px;
   }
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
@@ -134,6 +129,23 @@ address {
   .about-card-img {
     max-width: 507px;
   }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .about-card-img-line {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    background-color: transparent;
+    max-width: 710px;
+  }
+}
+
+.revers {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
 }
 
 .about-card-text {
@@ -184,6 +196,17 @@ address {
   text-transform: uppercase;
   padding: 20px 0 0 20px;
 }
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .type-card-p {
+    padding: 32px 0 0 20px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .type-card-p-revers {
+    padding: 32px 20px 0 0;
+  }
+}
 
 .card-title {
   font-size: 25px;
@@ -197,6 +220,19 @@ address {
   line-height: 1.4;
   font-weight: 200;
   padding: 12px 0 8px 20px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .card-title-artcl-revers {
+    padding: 12px 20px 12px 0;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .card-title-artcl-line {
+    font-size: 18px;
+    line-height: 1.4;
+  }
 }
 
 .card-title-artcl-sl {
@@ -231,6 +267,12 @@ address {
   font-size: 11px;
   line-height: 1.5;
   padding: 0 0 0 20px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .date-p-revers {
+    padding: 0 20px 0 0px;
+  }
 }
 
 .slider {
