--- a/src/sass/component/_about.scss
+++ b/src/sass/component/_about.scss
@@ -1,7 +1,7 @@
 .about {
-  @include tablet {
-    padding: 0 131px;
-  }
+  // @include tablet {
+  //   padding: 0 131px;
+  // }
 
   background-color: $section-bg-fon;
   padding: 0 20px 8px 20px;
@@ -9,7 +9,8 @@
 
 .about-container {
   @include tablet {
-    padding-top: 50px;
+    // padding-top: 50px;
+    padding: 50px 131px;
   }
 
   @include mobile {
@@ -36,6 +37,18 @@
   }
 
   margin: 0 0 32px 0;
+}
+
+.about-card-img-line {
+  @include tablet {
+    display: flex;
+    background-color: transparent;
+    max-width: 710px;
+  }
+}
+
+.revers {
+  flex-direction: row-reverse;
 }
 
 .about-card-text {
@@ -65,6 +78,12 @@
   border-bottom-right-radius: 10px;
 }
 
+// .card-box-line {
+//   @include tablet {
+
+//   }
+// }
+
 .type-card {
   @include tablet {
     padding-top: 16px;
@@ -78,10 +97,20 @@
 }
 
 .type-card-p {
+  @include tablet {
+    padding: 32px 0 0 20px;
+  }
+
   @include font(12px, 1);
   font-family: 'Poppins', sans-serif;
   text-transform: uppercase;
   padding: 20px 0 0 20px;
+}
+
+.type-card-p-revers {
+  @include tablet {
+    padding: 32px 20px 0 0;
+  }
 }
 
 .card-title {
@@ -94,6 +123,18 @@
   @include font(16px, 1.4);
   font-weight: 200;
   padding: 12px 0 8px 20px;
+}
+
+.card-title-artcl-revers {
+  @include tablet {
+    padding: 12px 20px 12px 0;
+  }
+}
+
+.card-title-artcl-line {
+  @include tablet {
+    @include font(18px, 1.4);
+  }
 }
 
 .card-title-artcl-sl {
@@ -121,6 +162,12 @@
 .date-p {
   @include font(11px, 1.5);
   padding: 0 0 0 20px;
+}
+
+.date-p-revers {
+  @include tablet {
+    padding: 0 20px 0 0px;
+  }
 }
 
 .slider {
