--- a/src/sass/component/_subscription.scss
+++ b/src/sass/component/_subscription.scss
@@ -1,4 +1,8 @@
 .subscription {
+  @include tablet {
+    max-width: 376px;
+  }
+
   position: relative;
   background-color: $primary-bg-fon;
   padding: 62px 0 62px 0;
@@ -7,6 +11,10 @@
 }
 
 .subtitle-subscr {
+  @include tablet {
+    font-size: 28px;
+  }
+
   @include font(26px, 1.3);
   font-weight: 200;
   padding-bottom: 20px;
@@ -15,10 +23,18 @@
 }
 
 .text-subscr {
+  @include tablet {
+    font-size: 16px;
+  }
+
   padding-bottom: 32px;
 }
 
 .subscr-form {
+  @include tablet {
+    max-width: 376px;
+  }
+
   position: relative;
   display: block;
   margin: 0 auto;
@@ -29,6 +45,9 @@
 }
 
 .data-field {
+  @include tablet {
+    max-width: 376px;
+  }
   display: block;
   position: relative;
   max-width: 280px;
@@ -37,6 +56,11 @@
 }
 
 .data-input {
+  @include tablet {
+    min-width: 376px;
+    min-height: 38px;
+  }
+
   display: block;
   position: relative;
   font-family: 'Georgia', serif;
