--- a/src/css/main.css
+++ b/src/css/main.css
@@ -72,6 +72,12 @@ address {
   cursor: none;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .logo-s {
+    min-width: 78px;
+  }
+}
+
 .hero-container {
   padding: 52px 20px 32px 20px;
 }
@@ -79,6 +85,12 @@ address {
 .hero-logo {
   min-width: 84px;
   min-height: 42px;
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .hero-logo {
+    min-width: 94px;
+    min-height: 48px;
+  }
 }
 
 .hero-title {
@@ -605,6 +617,11 @@ address {
   padding-bottom: 32px;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .footer {
+    padding: 52px 137px;
+  }
+}
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .footer {
     max-width: 320px;
@@ -625,6 +642,8 @@ address {
 }
 
 .nav-footer-item {
+  font-size: 13px;
+  line-height: 1.5;
   margin-right: 20px;
   padding-bottom: 20px;
 }
