--- a/src/css/main.css
+++ b/src/css/main.css
@@ -71,6 +71,11 @@ address {
   border: none;
   cursor: none;
 }
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .burger-menu {
+    display: none;
+  }
+}
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .logo-s {
@@ -80,6 +85,11 @@ address {
 
 .hero-container {
   padding: 52px 20px 32px 20px;
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .hero-container {
+    padding: 76px 106px 52px 76px;
+  }
 }
 
 .hero-logo {
@@ -99,6 +109,11 @@ address {
   font-weight: 200;
   color: #353732;
   padding: 20px 0 0 0;
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .hero-title {
+    font-size: 32px;
+  }
 }
 
 .about {
