--- a/src/sass/component/_hero.scss
+++ b/src/sass/component/_hero.scss
@@ -1,4 +1,7 @@
 .hero-container {
+  @include tablet {
+    padding: 76px 106px 52px 76px;
+  }
   padding: 52px 20px 32px 20px;
 }
 
@@ -12,6 +15,9 @@
 }
 
 .hero-title {
+  @include tablet {
+    font-size: 32px;
+  }
   @include font(23px, 1.7);
   font-weight: 200;
   color: $secondary-clr-t;
