add tooltips for slider on mob

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -13,6 +13,7 @@ $section-bg-fon: #ededed;
 $logo-fill: #45525b;
 $icon-fill: #353732;
 $icon-arrow: #575445;
+$icon-swipe: #b8b8b8;
 
 // STROKE
 $stroke-clr: #e5e7eb;
