--- a/src/css/main.css
+++ b/src/css/main.css
@@ -62,6 +62,11 @@ address {
   padding: 10px 15px;
   background: #fff;
 }
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .header-container {
+    padding: 20px 52px;
+  }
+}
 
 .burger-menu {
   fill: #45525b;
@@ -80,6 +85,33 @@ address {
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .logo-s {
     min-width: 78px;
+  }
+}
+
+.header-list {
+  display: none;
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .header-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .header-item {
+    margin-right: 32px;
+  }
+  .header-item:last-child {
+    margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .header-link {
+    font-size: 16px;
+    line-height: 1.1;
   }
 }
 
@@ -229,6 +261,7 @@ address {
 }
 
 .card-box {
+  position: relative;
   max-width: 243px;
   min-height: 134px;
   background-color: #fff;
@@ -397,6 +430,86 @@ address {
   }
 }
 
+.swipe {
+  position: absolute;
+  bottom: 0px;
+  right: 5px;
+  -webkit-transform: rotate(15deg);
+          transform: rotate(15deg);
+  overflow: hidden;
+  fill: #b8b8b8;
+  -webkit-animation-name: attenuation;
+          animation-name: attenuation;
+  -webkit-animation-duration: 1000ms;
+          animation-duration: 1000ms;
+  -webkit-animation-iteration-count: 3;
+          animation-iteration-count: 3;
+}
+
+@-webkit-keyframes attenuation {
+  0% {
+    fill: #b8b8b8;
+  }
+  50% {
+    fill: #e5e5e5;
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    fill: #b8b8b8;
+  }
+}
+
+@keyframes attenuation {
+  0% {
+    fill: #b8b8b8;
+  }
+  50% {
+    fill: #e5e5e5;
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    fill: #b8b8b8;
+  }
+}
+.swipe:hover,
+.swipe:active {
+  -webkit-animation-name: attenuation1;
+          animation-name: attenuation1;
+  -webkit-animation-duration: 1000ms;
+          animation-duration: 1000ms;
+  -webkit-animation-iteration-count: 3;
+          animation-iteration-count: 3;
+}
+
+@-webkit-keyframes attenuation1 {
+  0% {
+    fill: #b8b8b8;
+  }
+  50% {
+    fill: #e5e5e5;
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    fill: #b8b8b8;
+  }
+}
+
+@keyframes attenuation1 {
+  0% {
+    fill: #b8b8b8;
+  }
+  50% {
+    fill: #e5e5e5;
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    fill: #b8b8b8;
+  }
+}
 .subscription {
   position: relative;
   background-color: #f2f2f2;
