add cards from slider for tablet

--- a/src/sass/component/_about.scss
+++ b/src/sass/component/_about.scss
@@ -188,9 +188,9 @@
 }
 
 .article-card-slider {
-  @include tablet {
-    display: none;
-  }
+  // @include tablet {
+  //   display: none;
+  // }
 
   padding-bottom: 24px;
   width: 243px;
@@ -208,9 +208,9 @@
 }
 
 .no-slider {
-  display: none;
+  // display: none;
   @include tablet {
-    padding: 16px 0 50px 0;
+    padding: 32px 0 50px 0;
   }
 }
 
@@ -228,59 +228,5 @@
     &:last-child {
       margin-right: 0;
     }
-  }
-}
-
-.swipe {
-  @include tablet {
-    display: none;
-  }
-  position: absolute;
-  bottom: 0px;
-  right: 5px;
-  transform: rotate(15deg);
-  overflow: hidden;
-  fill: $icon-swipe;
-  animation-name: attenuation;
-  animation-duration: 1000ms;
-  animation-iteration-count: 3;
-  
-  // animation-iteration-count: infinite; - безкінечна анімація
-}
-
-@keyframes attenuation {
-  0% {
-    fill: $icon-swipe;
-  }
-
-  50% {
-    fill: #e5e5e5;
-    transform: rotate(0deg);
-  }
-
-  100% {
-    fill: $icon-swipe;
-  }
-}
-
-.swipe:hover,
-.swipe:active {
-  animation-name: attenuation1;
-  animation-duration: 1000ms;
-  animation-iteration-count: 3;
-}
-
-@keyframes attenuation1 {
-  0% {
-    fill: $icon-swipe;
-  }
-
-  50% {
-    fill: #e5e5e5;
-    transform: rotate(0deg);
-  }
-
-  100% {
-    fill: $icon-swipe;
   }
 }
