--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,6 +15,7 @@
 @import './component/archive';
 @import './component/footer';
 @import './component/menu-burger';
+@import './component/swipe';
 
 // GALLERYMOUNTINS
 @import './galleryStyle/stylesLightBox';
