--- a/src/sass/component/_header.scss
+++ b/src/sass/component/_header.scss
@@ -2,6 +2,11 @@
   @include tablet {
     padding: 20px 52px;
   }
+
+  @include desktop {
+    padding: 20px 148px;
+  }
+
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -13,6 +18,10 @@
   @include tablet {
     display: none;
   }
+
+  @include desktop {
+    display: none;
+  }
   fill: $logo-fill;
   max-height: 32px;
   background-color: transparent;
@@ -22,21 +31,21 @@
 }
 
 .logo-s {
-  @include tablet {
+  @include tabletMin {
     min-width: 78px;
   }
 }
 
 .header-list {
-  @include tablet {
+  @include tabletMin {
     display: flex;
   }
   display: none;
 }
 
 .header-item {
-  @include tablet {
-    margin-right: 32px;
+  @include desktop {
+    margin-right: 52px;
 
     &:last-child {
       margin-right: 0;
@@ -47,5 +56,9 @@
 .header-link {
   @include tablet {
     @include font(16px, 1.1);
+  }
+
+  @include desktop {
+    font-size: 18px;
   }
 }
