--- a/src/sass/utils/_mixin.scss
+++ b/src/sass/utils/_mixin.scss
@@ -11,7 +11,7 @@
 }
 
 @mixin tabletMin {
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1920px) {
     @content;
   }
 }
