--- a/src/css/main.css
+++ b/src/css/main.css
@@ -130,6 +130,20 @@ address {
   }
 }
 
+@media screen and (min-width: 1024px) and (max-width: 1920px) {
+  .hero {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding: 100px 0px 100px 0px;
+    -webkit-transform: translateX(-52px);
+            transform: translateX(-52px);
+  }
+}
+
 .hero-container {
   padding: 52px 20px 32px 20px;
 }
@@ -140,7 +154,8 @@ address {
 }
 @media screen and (min-width: 1024px) and (max-width: 1920px) {
   .hero-container {
-    padding: 100px 447px 100px 336px;
+    padding: 0;
+    max-width: 700px;
   }
 }
 
@@ -220,6 +235,18 @@ address {
             align-items: center;
   }
 }
+@media screen and (min-width: 1024px) and (max-width: 1920px) {
+  .about-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding-top: 100px;
+    padding-bottom: 16px;
+  }
+}
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .about-container {
     max-width: 280px;
@@ -232,6 +259,11 @@ address {
     display: -ms-flexbox;
     display: flex;
     padding-top: 62px;
+  }
+}
+@media screen and (min-width: 1024px) and (max-width: 1920px) {
+  .about-box {
+    margin-left: 16px;
   }
 }
 
@@ -248,6 +280,10 @@ address {
 @media screen and (min-width: 1024px) and (max-width: 1920px) {
   .about-card-img {
     max-width: 507px;
+    background-color: #ffffff;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    margin-bottom: 0;
   }
 }
 
@@ -272,9 +308,19 @@ address {
 .about-card-text {
   padding-left: 20px;
 }
+@media screen and (min-width: 1024px) and (max-width: 1920px) {
+  .about-card-text {
+    padding-left: 15px;
+  }
+}
 
 .article-card {
   padding-bottom: 32px;
+}
+@media screen and (min-width: 1024px) and (max-width: 1920px) {
+  .article-card {
+    padding-bottom: 0;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
@@ -283,6 +329,14 @@ address {
   }
   .article-list:last-child {
     margin-right: 0;
+  }
+}
+@media screen and (min-width: 1024px) and (max-width: 1920px) {
+  .article-list {
+    padding-bottom: 16px;
+  }
+  .article-list:last-child {
+    padding-bottom: 0;
   }
 }
 
@@ -298,6 +352,11 @@ address {
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .card-box {
     height: 146px;
+  }
+}
+@media screen and (min-width: 1024px) and (max-width: 1920px) {
+  .card-box {
+    min-height: 121px;
   }
 }
 
@@ -331,6 +390,11 @@ address {
     padding: 32px 20px 0 0;
   }
 }
+@media screen and (min-width: 1024px) and (max-width: 1920px) {
+  .type-card-p {
+    font-size: 16px;
+  }
+}
 
 .card-title {
   font-size: 25px;
@@ -348,6 +412,11 @@ address {
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .card-title-artcl__revers {
     padding: 12px 20px 12px 0;
+  }
+}
+@media screen and (min-width: 1024px) and (max-width: 1920px) {
+  .card-title-artcl {
+    font-size: 20px;
   }
 }
 
@@ -369,9 +438,16 @@ address {
   letter-spacing: 0.05em;
   width: 280px;
 }
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (min-width: 768px) and (max-width: 1920px) {
   .card-description {
     width: auto;
+  }
+}
+@media screen and (min-width: 1024px) and (max-width: 1920px) {
+  .card-description {
+    font-size: 16px;
+    line-height: 1.4;
+    padding-right: 5px;
   }
 }
 
@@ -385,6 +461,11 @@ address {
     padding: 12px 0 6px 0;
   }
 }
+@media screen and (min-width: 1024px) and (max-width: 1920px) {
+  .date {
+    padding-top: 40px;
+  }
+}
 
 .date-p {
   font-size: 11px;
@@ -394,6 +475,11 @@ address {
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .date-p__revers {
     padding: 0 20px 0 0px;
+  }
+}
+@media screen and (min-width: 1024px) and (max-width: 1920px) {
+  .date-p {
+    font-size: 12px;
   }
 }
 
